<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Controler.Fragment.AddReunionFragment"
    android:id="@+id/arf_scroll_view">

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_reunion_fragment"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin">

        <!-- Subject -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sujet de la réunion"
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/text_margin"
            android:id="@+id/arf_subject_edit_text"/>

        <!-- Date and Hour -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Date"
                    android:gravity="center"
                    android:textSize="@dimen/title_size"
                    android:id="@+id/arf_date_txt"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableBottom="@android:drawable/ic_menu_today"
                    android:id="@+id/arf_date" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Heure"
                    android:textSize="@dimen/title_size"
                    android:id="@+id/arf_hours_txt"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/arf_hours_spinner"/>

            </LinearLayout>


        </LinearLayout>

        <!-- Room -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salle"
            android:textSize="@dimen/title_size" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_room_size"
            android:gravity="center"
            android:scrollbarSize="@dimen/spinner_room_size"
            android:textAlignment="center"
            android:id="@+id/arf_room"/>



        <!-- Mails -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Participants"
            android:textSize="@dimen/title_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="eMail du Participant"
                android:textSize="@dimen/title_size"
                android:layout_weight="1"
                android:id="@+id/arf_mail"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:background="@null"
                android:drawableBottom="@android:drawable/ic_input_add"
                android:id="@+id/arf_add_mails_button"/>


        </LinearLayout>

        <!-- List of mails-->

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/recycler_view_mails"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/fragment_one_mail"
            android:id="@+id/arf_liste_mails"/>


        <!-- Final Button -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:layout_gravity="right"
            android:paddingBottom="100dp"
            app:srcCompat="@drawable/ic_add_white_24dp"
            android:backgroundTint="#E91C1C"
            android:id="@+id/arf_fab"
            />

       </LinearLayout>


   </ScrollView>