<?xml version="1.0" encoding="utf-8"?>
    <androidx.recyclerview.widget.RecyclerView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Controler.Fragment.ListReunionsFragment"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        app:layoutManager="LinearLayoutManager"
        android:id="@+id/fragment_list_reunions"
        tools:listitem="@layout/fragment_one_reunion"
    />


