<resources>
    <string name="app_name">Ma Reu</string>
    <string name="filter_date">Filtre par Date</string>
    <string name="filter_room">Filtre par Salle</string>
    <string name="no_filter">Toutes les Réunions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
