<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dsf_layout">

   <Spinner
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/dsf_spinner"/>

</LinearLayout>