<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareu.Controler.Activity.MainActivity">


    <item
        android:icon="@drawable/icon_menu_hamburger"
        app:showAsAction="always"
        android:title="Filtrer"
        android:id="@+id/menu_button">

        <menu>

            <item
                android:id="@+id/no_filter"
                android:orderInCategory="100"
                android:title="@string/no_filter"
                app:showAsAction="never" />

            <item
                android:id="@+id/filter_date"
                android:orderInCategory="100"
                android:title="@string/filter_date"
                app:showAsAction="never" />

            <item
                android:id="@+id/filter_room"
                android:orderInCategory="100"
                android:title="@string/filter_room"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>
